--- a/dynamax/hmm/demos/casino_hmm.ipynb
+++ b/dynamax/hmm/demos/casino_hmm.ipynb
@@ -280,11 +280,8 @@
    "name": "hmm_casino.ipynb",
    "provenance": []
   },
-  "interpreter": {
-   "hash": "1c9b7abd99f812592e04518a2dddca5f7bc8ca20b74b8ad7e1b8422bf8e8c0a8"
-  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.5 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -298,7 +295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.5"
   },
   "vscode": {
    "interpreter": {
