--- a/docs/notebooks/linear_gaussian_ssm/kf_tracking.ipynb
+++ b/docs/notebooks/linear_gaussian_ssm/kf_tracking.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "Consider an object moving in $\\real^2$.\n",
+    "Consider an object moving in $R^2$.\n",
     "We assume that we observe a noisy version of its location at each time step.\n",
     "We want to track the object and possibly forecast its future motion.\n",
     "We now show how to do this using a simple linear Gaussian SSM, combined with \n",
@@ -31,7 +31,7 @@
     "to avoid confusion with the state and observation variables.)\n",
     "The process evolves in continuous time, but if we discretize it with step size $\\Delta$,\n",
     "we can write the dynamics as the following linear system:\n",
-    "$$\n",
+    "\n",
     "\\begin{align}\n",
     "\\underbrace{\\begin{pmatrix} u_t\\\\ \\dot{u}_t \\\\ v_t \\\\ \\dot{v}_t \\end{pmatrix}}_{z_t}\n",
     "  = \n",
@@ -46,8 +46,8 @@
     "\\underbrace{\\begin{pmatrix} u_{t-1} \\\\ \\dot{u}_{t-1} \\\\ v_{t-1} \\\\ \\dot{v}_{t-1} \\end{pmatrix}}_{z_{t-1}}\n",
     "+ q_t\n",
     "\\end{align}\n",
-    "$$\n",
-    "where $q_t \\in \\real^4$ is the process noise, which we assume is Gaussian,\n",
+    "\n",
+    "where $q_t \\in R^4$ is the process noise, which we assume is Gaussian,\n",
     "so  $q_t \\sim N(0,Q)$.\n"
    ]
   },
@@ -62,7 +62,7 @@
     "observe the location (but not the velocity).\n",
     "We assume the observation is corrupted by  Gaussian noise.\n",
     "Thus the observation model becomes\n",
-    "$$\n",
+    "\n",
     "\\begin{align}\n",
     "\\underbrace{\\begin{pmatrix}  y_{1,t} \\\\  y_{2,t} \\end{pmatrix}}_{y_t}\n",
     "  &=\n",
@@ -76,7 +76,7 @@
     "\\underbrace{\\begin{pmatrix} u_t\\\\ \\dot{u}_t \\\\ v_t \\\\ \\dot{v}_t \\end{pmatrix}}_{z_t}    \n",
     " + r_t\n",
     "\\end{align}\n",
-    "$$\n",
+    "\n",
     "where $r_t \\sim N(0,R)$ is the observation noise.\n",
     "We see that the observation matrix $H$ simply ``extracts'' the\n",
     "relevant parts  of the state vector.\n",
@@ -170,6 +170,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from msilib.schema import RadioButton\n",
+    "\n",
+    "\n",
     "state_dim = 4\n",
     "emission_dim = 2\n",
     "delta = 1.0\n",
@@ -181,16 +184,23 @@
     "params, _ = lgssm.random_initialization(jr.PRNGKey(0))\n",
     "\n",
     "# Manually chosen parameters\n",
-    "params['initial']['mean'] = jnp.array([8.0, 10.0, 1.0, 0.0])\n",
-    "params['initial']['cov'] = jnp.eye(state_dim) * 0.1\n",
-    "params['dynamics']['weights'] = jnp.array([[1, 0, delta, 0],\n",
-    "                                            [0, 1, 0, delta],\n",
-    "                                            [0, 0, 1, 0],\n",
-    "                                            [0, 0, 0, 1]])\n",
-    "params['dynamics']['cov'] = jnp.eye(state_dim) * 0.001\n",
-    "params['emissions']['weights'] = jnp.array([[1.0, 0, 0, 0],\n",
-    "                                            [0, 1.0, 0, 0]])\n",
-    "params['emissions']['cov'] = jnp.eye(emission_dim) * 1.0"
+    "mu0 = jnp.array([8.0, 10.0, 1.0, 0.0])\n",
+    "Sigma0 = jnp.eye(state_dim) * 0.1\n",
+    "F  = jnp.array([[1, 0, delta, 0],\n",
+    "                [0, 1, 0, delta],\n",
+    "                [0, 0, 1, 0],\n",
+    "                [0, 0, 0, 1]])\n",
+    "Q = jnp.eye(state_dim) * 0.001\n",
+    "H = jnp.array([[1.0, 0, 0, 0],\n",
+    "                [0, 1.0, 0, 0]])\n",
+    "R = jnp.eye(emission_dim) * 1.0\n",
+    "\n",
+    "params['initial']['mean'] = mu0\n",
+    "params['initial']['cov'] = Sigma0\n",
+    "params['dynamics']['weights'] = F\n",
+    "params['dynamics']['cov'] = Q\n",
+    "params['emissions']['weights'] = H\n",
+    "params['emissions']['cov'] = R"
    ]
   },
   {
@@ -410,16 +420,7 @@
    "outputs": [],
    "source": [
     " # Specify the model parameters\n",
-    "mu0 = jnp.array([8.0, 10.0, 1.0, 0.0])\n",
-    "Sigma0 = jnp.eye(state_dim) * 0.1\n",
-    "F  = jnp.array([[1, 0, delta, 0],\n",
-    "                [0, 1, 0, delta],\n",
-    "                [0, 0, 1, 0],\n",
-    "                [0, 0, 0, 1]])\n",
-    "Q = jnp.eye(state_dim) * 0.001\n",
-    "H = jnp.array([[1.0, 0, 0, 0],\n",
-    "                [0, 1.0, 0, 0]])\n",
-    "R = jnp.eye(emission_dim) * 1.0\n",
+    "\n",
     "\n",
     "params = LGSSMParams(\n",
     "    initial_mean=mu0, \n",
