--- a/docs/notebooks/hmm/casino_hmm_inference.ipynb
+++ b/docs/notebooks/hmm/casino_hmm_inference.ipynb
@@ -15,7 +15,8 @@
     "This is from the book\n",
     "\"Biological Sequence Analysis: Probabilistic Models of Proteins and Nucleic Acids\"\n",
     "by R. Durbin, S. Eddy, A. Krogh and G. Mitchison (1998).\n",
-    "\n"
+    "\n",
+    "![Casino HMM](https://github.com/probml/dynamax/docs/figures/casino.png)"
    ]
   },
   {
