--- a/docs/notebooks/hmm/casino_hmm_training.ipynb
+++ b/docs/notebooks/hmm/casino_hmm_training.ipynb
@@ -18,6 +18,15 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The figure below shows the graphical model, with the parameter nodes explicitly added.\n",
+    "\n",
+    "![HMM with parameters]](https://github.com/probml/dynamax/docs/figures/hmmDgmPlatesY.png)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "w7B-x7WeTTQE"
    },
