add more notebooks

--- a/docs/notebooks/hmm/casino_hmm_training.ipynb
+++ b/docs/notebooks/hmm/casino_hmm_training.ipynb
@@ -22,7 +22,8 @@
    "source": [
     "The figure below shows the graphical model, with the parameter nodes explicitly added.\n",
     "\n",
-    "![HMM with parameters]](https://github.com/probml/dynamax/docs/figures/hmmDgmPlatesY.png)\n"
+    "\n",
+    "![HMM with parameters](https://github.com/probml/dynamax/blob/main/docs/figures/hmmDgmPlatesY.png?raw=true)\n"
    ]
   },
   {
