--- a/docs/notebooks/hmm/casino_hmm_inference.ipynb
+++ b/docs/notebooks/hmm/casino_hmm_inference.ipynb
@@ -15,8 +15,7 @@
     "This is from the book\n",
     "\"Biological Sequence Analysis: Probabilistic Models of Proteins and Nucleic Acids\"\n",
     "by R. Durbin, S. Eddy, A. Krogh and G. Mitchison (1998).\n",
-    "\n",
-    "![Casino HMM](https://github.com/probml/dynamax/docs/figures/casino.png)"
+    "\n"
    ]
   },
   {
@@ -68,6 +67,14 @@
    "metadata": {},
    "source": [
     "# Make model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b48fe0db",
+   "metadata": {},
+   "source": [
+    "![Casino HMM](https://github.com/probml/dynamax/blob/main/docs/figures/casino.png?raw=true)"
    ]
   },
   {
