changing random seed on casino hmm training

--- a/docs/notebooks/hmm/casino_hmm_training.ipynb
+++ b/docs/notebooks/hmm/casino_hmm_training.ipynb
@@ -41,26 +41,14 @@
    "metadata": {
     "id": "qf_3RpxOAKX2"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/Users/scott/Projects/dynamax/dynamax/__init__.py'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "try:\n",
     "    import dynamax\n",
     "except ModuleNotFoundError:\n",
     "    print('installing dynamax')\n",
     "    %pip install -qq git+https://github.com/probml/dynamax.git\n",
-    "    import dynamax\n",
-    "dynamax.__file__"
+    "    import dynamax"
    ]
   },
   {
@@ -349,7 +337,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fc539277070>]"
+       "[<matplotlib.lines.Line2D at 0x7ff169069c70>]"
       ]
      },
      "execution_count": 12,
@@ -435,7 +423,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fc56aced9a0>]"
+       "[<matplotlib.lines.Line2D at 0x7ff1691c6970>]"
       ]
      },
      "execution_count": 15,
@@ -512,7 +500,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "311a980a18f44f798b8876a14a075807",
+       "model_id": "1e44167726624f51b83d5b605c5e0d36",
        "version_major": 2,
        "version_minor": 0
       },
@@ -564,7 +552,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fc530183880>]"
+       "[<matplotlib.lines.Line2D at 0x7ff169299730>]"
       ]
      },
      "execution_count": 17,
