remove old notebook demos, update doc notebooks with KF

--- a/docs/notebooks/hmm/gaussian_hmm_2d.ipynb
+++ b/docs/notebooks/hmm/gaussian_hmm_2d.ipynb
@@ -17,7 +17,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Setup"
+    "## Setup"
    ]
   },
   {
@@ -92,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Generate sample data"
+    "## Generate sample data"
    ]
   },
   {
@@ -164,7 +164,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Initialize model and fit to data"
+    "## Initialize model and fit to data"
    ]
   },
   {
@@ -272,7 +272,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Visualize the fitted model"
+    "## Visualize the fitted model"
    ]
   },
   {
@@ -344,7 +344,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Show the plotting code"
+    "## Show the plotting code"
    ]
   },
   {
