--- a/docs/notebooks/nonlinear_gaussian_ssm/ekf_ukf_pendulum.ipynb
+++ b/docs/notebooks/nonlinear_gaussian_ssm/ekf_ukf_pendulum.ipynb
@@ -16,7 +16,7 @@
    },
    "source": [
     "This notebook demonstrates a simple pendulum tracking example.\n",
-    "The example is taken from p45 of Simo Sarkka (2013), “Bayesian Filtering and Smoothing,” Cambridge University Press. Available: https://users.aalto.fi/~ssarkka/pub/cup_book_online_20131111.pdf\n",
+    "The example is taken from p45 of  \"Bayesian Filtering and Smoothing\", Simo Sarkka (2013). Available: https://users.aalto.fi/~ssarkka/pub/cup_book_online_20131111.pdf\n",
     "\n",
     "The JAX translation is by Peter G. Chang ([@petergchang](https://github.com/petergchang)) and taken from the [sarkka-jax](https://github.com/petergchang/sarkka-jax) repo.\n",
     "\n",
