--- a/docs/notebooks/nonlinear_gaussian_ssm/ekf_ukf_spiral.ipynb
+++ b/docs/notebooks/nonlinear_gaussian_ssm/ekf_ukf_spiral.ipynb
@@ -60,7 +60,7 @@
    "id": "ce5fdeca",
    "metadata": {},
    "source": [
-    "# Setup"
+    "## Setup"
    ]
   },
   {
@@ -133,7 +133,7 @@
    "id": "118e3213",
    "metadata": {},
    "source": [
-    "# Create the model"
+    "## Create the model"
    ]
   },
   {
@@ -163,7 +163,7 @@
    "id": "81a28d0d",
    "metadata": {},
    "source": [
-    "# Sample some data from the model"
+    "## Sample some data from the model"
    ]
   },
   {
@@ -254,10 +254,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53862c48",
+   "id": "e407159e",
    "metadata": {},
    "source": [
-    "# Extended Kalman filter\n",
+    "## Extended Kalman filter\n",
     "\n"
    ]
   },
@@ -306,7 +306,7 @@
    "id": "2bf04fd0",
    "metadata": {},
    "source": [
-    "# Unscented Kalman filter"
+    "## Unscented Kalman filter"
    ]
   },
   {
