add more KF notebooks

--- a/docs/notebooks/nonlinear_gaussian_ssm/ekf_ukf_pendulum.ipynb
+++ b/docs/notebooks/nonlinear_gaussian_ssm/ekf_ukf_pendulum.ipynb
@@ -6,7 +6,7 @@
     "id": "4j2SH7ks97hb"
    },
    "source": [
-    "# Tracking a 1d pendulum using Extended / Unscented Kalman filter/ smoother."
+    "# Tracking a 1d pendulum using Extended / Unscented Kalman filter/ smoother"
    ]
   },
   {
@@ -16,9 +16,9 @@
    },
    "source": [
     "This notebook demonstrates a simple pendulum tracking example.\n",
-    "The example is taken from p45 of  \"Bayesian Filtering and Smoothing\", Simo Sarkka (2013). Available: https://users.aalto.fi/~ssarkka/pub/cup_book_online_20131111.pdf\n",
-    "\n",
-    "The JAX translation is by Peter G. Chang ([@petergchang](https://github.com/petergchang)) and taken from the [sarkka-jax](https://github.com/petergchang/sarkka-jax) repo.\n",
+    "The example is taken from p45 of \n",
+    "*Bayesian Filtering and Smoothing* (S. Särkkä, 2013).\n",
+    "This code is based on the  [sarkka-jax](https://github.com/petergchang/sarkka-jax) repo.\n",
     "\n",
     "\n",
     "The physics of the problem is shown below, where $\\alpha$ is the angle relative to vertical,\n",
@@ -163,7 +163,7 @@
     "id": "33ISOI7QtWlP"
    },
    "source": [
-    "# Sample data and plot it"
+    "## Sample data and plot it"
    ]
   },
   {
