tweak the notebooks

--- a/docs/notebooks/linear_gaussian_ssm/lgssm_learning.ipynb
+++ b/docs/notebooks/linear_gaussian_ssm/lgssm_learning.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "id": "sO8k0Mi4gv9U"
    },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
        "(0.0, 99.0)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,21 +154,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def plot_predictions(true_model, true_params, test_model, test_params, emissions):\n",
-    "    posterior = test_model.smoother(test_params, emissions)\n",
-    "    smoothed_emissions = posterior.smoothed_means @ test_params['emissions']['weights'].T \\\n",
-    "        + test_params['emissions']['bias']\n",
-    "    smoothed_emissions_cov = (test_params['emissions']['weights']\n",
-    "                                @ posterior.smoothed_covariances\n",
-    "                                @ test_params['emissions']['weights'].T\n",
-    "                                + test_params['emissions']['cov'])\n",
-    "    smoothed_emissions_std = jnp.sqrt(\n",
-    "        jnp.array([smoothed_emissions_cov[:, i, i] for i in range(emission_dim)]))\n",
-    "\n",
+    "    smoothed_emissions, smoothed_emissions_std = test_model.posterior_predictive(test_params, emissions)\n",
     "\n",
     "    spc = 3\n",
     "    plt.figure(figsize=(10, 4))\n",
@@ -192,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
