remove TFP warning code from notebooks. remove stale kf tracking script from notebook. start to clean up GGF

--- a/docs/notebooks/linear_gaussian_ssm/kf_tracking.ipynb
+++ b/docs/notebooks/linear_gaussian_ssm/kf_tracking.ipynb
@@ -96,37 +96,12 @@
    "outputs": [],
    "source": [
     "\n",
-    "\n",
     "try:\n",
     "    import dynamax\n",
     "except ModuleNotFoundError:\n",
     "    print('installing dynamax')\n",
     "    %pip install -qq git+https://github.com/probml/dynamax.git\n",
     "    import dynamax"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "KFpcV2mCL1DN",
-   "metadata": {
-    "id": "KFpcV2mCL1DN"
-   },
-   "outputs": [],
-   "source": [
-    "# Silence WARNING:root:The use of `check_types` is deprecated and does not have any effect.\n",
-    "# https://github.com/tensorflow/probability/issues/1523\n",
-    "import logging\n",
-    "\n",
-    "logger = logging.getLogger()\n",
-    "\n",
-    "\n",
-    "class CheckTypesFilter(logging.Filter):\n",
-    "    def filter(self, record):\n",
-    "        return \"check_types\" not in record.getMessage()\n",
-    "\n",
-    "\n",
-    "logger.addFilter(CheckTypesFilter())"
    ]
   },
   {
@@ -141,11 +116,10 @@
     "from jax import vmap, grad\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
-    "#from dynamax.plotting import plot_lgssm_posterior\n",
+    "\n",
     "from dynamax.plotting import plot_uncertainty_ellipses\n",
     "from dynamax.linear_gaussian_ssm.models.linear_gaussian_ssm import LinearGaussianSSM\n",
-    "from dynamax.linear_gaussian_ssm.inference import LGSSMParams, lgssm_smoother, lgssm_filter\n",
-    "from dynamax.linear_gaussian_ssm.demos.kf_tracking import kf_tracking, plot_kf_tracking"
+    "from dynamax.linear_gaussian_ssm.inference import LGSSMParams, lgssm_smoother, lgssm_filter\n"
    ]
   },
   {
