Fix dependency issues with changed submodule names

--- a/dynamax/cond_moments_gaussian_filter/demos/cmgf_poisson_demo.ipynb
+++ b/dynamax/cond_moments_gaussian_filter/demos/cmgf_poisson_demo.ipynb
@@ -85,12 +85,12 @@
       ],
       "source": [
         "try:\n",
-        "    from dynamax.cond_moments_gaussian_filter.inference import *\n",
+        "    from dynamax.cond_moments_gaussian_filter.cmgf import *\n",
         "    from dynamax.cond_moments_gaussian_filter.containers import *\n",
         "except ModuleNotFoundError:\n",
         "    print('installing dynamax and ssm')\n",
         "    %pip install -qq git+https://github.com/probml/dynamax.git\n",
-        "    from dynamax.cond_moments_gaussian_filter.inference import *\n",
+        "    from dynamax.cond_moments_gaussian_filter.cmgf import *\n",
         "    from dynamax.cond_moments_gaussian_filter.containers import *"
       ]
     },
