--- a/dynamax/cond_moments_gaussian_filter/demos/cmgf_mlp_classification_demo.ipynb
+++ b/dynamax/cond_moments_gaussian_filter/demos/cmgf_mlp_classification_demo.ipynb
@@ -69,7 +69,7 @@
         "    import dynamax\n",
         "print(dynamax.__file__)\n",
         "\n",
-        "from dynamax.cond_moments_gaussian_filter.inference import *\n",
+        "from dynamax.cond_moments_gaussian_filter.cmgf import *\n",
         "from dynamax.cond_moments_gaussian_filter.containers import *"
       ]
     },
@@ -9127,7 +9127,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3.8.5 ('base')",
+      "display_name": "Python 3.8.9 64-bit",
       "language": "python",
       "name": "python3"
     },
@@ -9141,11 +9141,11 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.5"
+      "version": "3.8.9"
     },
     "vscode": {
       "interpreter": {
-        "hash": "40d3a090f54c6569ab1632332b64b2c03c39dcf918b08424e98f38b5ae0af88f"
+        "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
       }
     }
   },
