--- a/dynamax/hmm/demos/bernoulli_hmm_example.ipynb
+++ b/dynamax/hmm/demos/bernoulli_hmm_example.ipynb
@@ -900,7 +900,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3.9.6 ('dynamax')",
+   "display_name": "Python 3.8.9 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -914,11 +914,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.9"
   },
   "vscode": {
    "interpreter": {
-    "hash": "92401d49bd83f70620e540b668b7091047c2ca041ed5ff6cc3954130de9aa1fc"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   },
   "widgets": {
