--- a/dynamax/cond_moments_gaussian_filter/demos/cmgf_multiclass_logreg_demo.ipynb
+++ b/dynamax/cond_moments_gaussian_filter/demos/cmgf_multiclass_logreg_demo.ipynb
@@ -20,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "Vo3x6Kglg4IY"
       },
@@ -54,11 +54,13 @@
       "outputs": [],
       "source": [
         "try:\n",
-        "    from dynamax.cond_moments_gaussian_filter.cmgf import *\n",
+        "    from dynamax.cond_moments_gaussian_filter.cmgf import conditional_moments_gaussian_filter, EKFIntegrals\n",
+        "    from dynamax.cond_moments_gaussian_filter.generalized_gaussian_ssm import GGSSMParams\n",
         "except ModuleNotFoundError:\n",
         "    print('installing dynamax')\n",
         "    %pip install -qq git+https://github.com/probml/dynamax.git\n",
-        "    from dynamax.cond_moments_gaussian_filter.cmgf import *"
+        "    from dynamax.cond_moments_gaussian_filter.cmgf import conditional_moments_gaussian_filter, EKFIntegrals\n",
+        "    from dynamax.cond_moments_gaussian_filter.generalized_gaussian_ssm import GGSSMParams"
       ]
     },
     {
@@ -1297,17 +1299,25 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3.8.9 64-bit",
+      "display_name": "Python 3.9.14 64-bit",
       "language": "python",
       "name": "python3"
     },
     "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
       "name": "python",
-      "version": "3.8.9"
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.14"
     },
     "vscode": {
       "interpreter": {
-        "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+        "hash": "a665b5d41d17b532ea9890333293a1b812fa0b73c9c25c950b3cedf1bebd0438"
       }
     }
   },
