--- a/dynamax/hmm/demos/autoregressive_hmm_demo.ipynb
+++ b/dynamax/hmm/demos/autoregressive_hmm_demo.ipynb
@@ -25,6 +25,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    import dynamax\n",
+    "except ModuleNotFoundError:\n",
+    "    print('installing dynamax')\n",
+    "    %pip install -qq git+https://github.com/probml/dynamax.git\n",
+    "    import dynamax"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "nbpresent": {
