updating initialization code for lgssm

--- a/docs/notebooks/linear_gaussian_ssm/lgssm_parallel_inference.ipynb
+++ b/docs/notebooks/linear_gaussian_ssm/lgssm_parallel_inference.ipynb
@@ -29,7 +29,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "58523a79",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-cell"
+    ]
+   },
    "outputs": [],
    "source": [
     "try:\n",
@@ -48,9 +52,8 @@
    "outputs": [],
    "source": [
     "from dynamax.linear_gaussian_ssm.inference import LGSSMParams, lgssm_filter, lgssm_smoother, lgssm_sample\n",
-    "#from dynamax.linear_gaussian_ssm.models import LinearGaussianSSM\n",
     "from dynamax.linear_gaussian_ssm.parallel_inference import  lgssm_filter as parallel_lgssm_filter\n",
-    "from dynamax.linear_gaussian_ssm.parallel_inference import  lgssm_smoother as parallel_lgssm_smoother\n"
+    "from dynamax.linear_gaussian_ssm.parallel_inference import  lgssm_smoother as parallel_lgssm_smoother"
    ]
   },
   {
