cleaned up LGSSM typed version, now with moment and info form

--- a/docs/notebooks/linear_gaussian_ssm/kf_linreg.ipynb
+++ b/docs/notebooks/linear_gaussian_ssm/kf_linreg.ipynb
@@ -52,14 +52,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from jax import numpy as jnp\n",
     "from matplotlib import pyplot as plt\n",
-    "from dynamax.linear_gaussian_ssm.inference import lgssm_filter\n",
-    "from dynamax.linear_gaussian_ssm.lgssm_types import ParamsLGSSMInf"
+    "from dynamax.linear_gaussian_ssm.inference import lgssm_filter, ParamsLGSSMMoment"
    ]
   },
   {
@@ -73,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,12 +106,12 @@
     "\n",
     "# This is an LGSSM with a non-stationary (time-index) emissions model\n",
     "\n",
-    "lgssm = ParamsLGSSMInf(\n",
+    "lgssm = ParamsLGSSMMoment(\n",
     "        initial_mean=mu0,\n",
     "        initial_covariance=Sigma0,\n",
-    "        dynamics_matrix=F,\n",
+    "        dynamics_weights=F,\n",
     "        dynamics_covariance=Q,\n",
-    "        emission_matrix=X[:, None, :], # (t, 1, D) where D = num input features\n",
+    "        emission_weights=X[:, None, :], # (t, 1, D) where D = num input features\n",
     "        emission_covariance=R,\n",
     "    )\n"
    ]
@@ -126,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,16 +164,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fb5095e01f0>"
+       "<matplotlib.legend.Legend at 0x7fa8b119db20>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
