--- a/docs/notebooks/linear_gaussian_ssm/kf_tracking.ipynb
+++ b/docs/notebooks/linear_gaussian_ssm/kf_tracking.ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "6eb6c0e6",
    "metadata": {},
    "outputs": [],
@@ -121,8 +121,7 @@
     "\n",
     "from dynamax.plotting import plot_uncertainty_ellipses\n",
     "from dynamax.linear_gaussian_ssm.linear_gaussian_ssm import LinearGaussianSSM\n",
-    "from dynamax.linear_gaussian_ssm.lgssm_types import ParamsLGSSMInf\n",
-    "from dynamax.linear_gaussian_ssm.inference import lgssm_smoother, lgssm_filter\n"
+    "from dynamax.linear_gaussian_ssm.inference import lgssm_smoother, lgssm_filter, ParamsLGSSMMoment\n"
    ]
   },
   {
@@ -135,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c0fcda3e",
    "metadata": {},
    "outputs": [],
@@ -180,17 +179,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "8f108dd3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fd91253f7f0>"
+       "<matplotlib.legend.Legend at 0x7f8e50e9cfd0>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -223,9 +222,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "c96d915b",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -280,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "fab5d4e3",
    "metadata": {},
    "outputs": [
@@ -311,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "b0585932",
    "metadata": {},
    "outputs": [
@@ -321,7 +324,7 @@
        "<AxesSubplot: >"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -363,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "8d6eae12",
    "metadata": {},
    "outputs": [],
@@ -373,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "06c8f6ec",
    "metadata": {},
    "outputs": [
@@ -383,7 +386,7 @@
        "<AxesSubplot: >"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -429,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "84299414",
    "metadata": {},
    "outputs": [],
@@ -437,12 +440,12 @@
     " # Specify the model parameters\n",
     "\n",
     "\n",
-    "inf_params = ParamsLGSSMInf(\n",
+    "inf_params = ParamsLGSSMMoment(\n",
     "    initial_mean=initial_mean, \n",
     "    initial_covariance=initial_covariance,\n",
-    "    dynamics_matrix=dynamics_weights,\n",
+    "    dynamics_weights=dynamics_weights,\n",
     "    dynamics_covariance=dynamics_covariance,\n",
-    "    emission_matrix=emission_weights,\n",
+    "    emission_weights=emission_weights,\n",
     "    emission_covariance=emission_covariance\n",
     ")\n",
     "\n",
@@ -463,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "a9492dfd",
    "metadata": {},
    "outputs": [],
@@ -478,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "4618b650",
    "metadata": {},
    "outputs": [],
@@ -489,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "e9f9885d",
    "metadata": {},
    "outputs": [],
@@ -548,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "7307b949",
    "metadata": {},
    "outputs": [
