changing log_det_jacobian api to take params instead of unc_parms

--- a/docs/notebooks/linear_gaussian_ssm/lgssm_hmc.ipynb
+++ b/docs/notebooks/linear_gaussian_ssm/lgssm_hmc.ipynb
@@ -187,7 +187,7 @@
        "\n",
        "    <div>\n",
        "      <progress value='100' class='' max='100' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      100.00% [100/100 00:01&lt;00:00]\n",
+       "      100.00% [100/100 00:02&lt;00:00]\n",
        "    </div>\n",
        "    "
       ],
@@ -293,7 +293,7 @@
     "        params = from_unconstrained(unc_params, props)\n",
     "        batch_lls = vmap(partial(model.marginal_log_prob, params))(batch_emissions, batch_inputs)\n",
     "        lp = model.log_prior(params) + batch_lls.sum()\n",
-    "        lp += log_det_jac_constrain(unc_params, props)\n",
+    "        lp += log_det_jac_constrain(params, props)\n",
     "        return lp\n",
     "\n",
     "    # Initialize the HMC sampler using window_adaptation\n",
@@ -430,7 +430,7 @@
        "\n",
        "    <div>\n",
        "      <progress value='500' class='' max='500' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      100.00% [500/500 00:44&lt;00:00]\n",
+       "      100.00% [500/500 00:50&lt;00:00]\n",
        "    </div>\n",
        "    "
       ],
@@ -661,7 +661,7 @@
        "\n",
        "    <div>\n",
        "      <progress value='500' class='' max='500' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      100.00% [500/500 00:35&lt;00:00]\n",
+       "      100.00% [500/500 00:37&lt;00:00]\n",
        "    </div>\n",
        "    "
       ],
