working on packaging. removing dependencies. adding versioneer

--- a/docs/notebooks/hmm/casino_hmm_inference.ipynb
+++ b/docs/notebooks/hmm/casino_hmm_inference.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "t9ZrTumQjsLN",
    "metadata": {
     "colab": {
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "9db1c6aa",
    "metadata": {},
    "outputs": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "6cceb3f1",
    "metadata": {},
    "outputs": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "071a53ca",
    "metadata": {},
    "outputs": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "a073721f",
    "metadata": {},
    "outputs": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "518917bf",
    "metadata": {},
    "outputs": [
@@ -260,7 +260,6 @@
    ],
    "source": [
     "posterior = hmm.filter(params, emissions)\n",
-    "\n",
     "print(posterior.marginal_loglik)\n",
     "print(posterior.filtered_probs.shape)\n"
    ]
@@ -275,13 +274,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "7130bcb8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
     "# Helper functions for plotting\n",
     "def find_dishonest_intervals(states):\n",
     "    \"\"\"\n",
@@ -296,8 +293,10 @@
     "    -------\n",
     "    list of tuples with span of values\n",
     "    \"\"\"\n",
-    "    states = np.array(states)\n",
-    "    changepoints = np.concatenate([[0], np.nonzero(np.diff(states))[0] + 1, [len(states)]])\n",
+    "    states = jnp.array(states)\n",
+    "    changepoints = jnp.concatenate([jnp.array([0]), \n",
+    "                                    jnp.nonzero(jnp.diff(states))[0] + 1, \n",
+    "                                    jnp.array([len(states)])])\n",
     "    starts, ends = changepoints[:-1], changepoints[1:]\n",
     "\n",
     "    # Return the (start, end) pairs where the start state is 1\n",
@@ -325,7 +324,7 @@
     "        Whether to plot steps (simple plot if False)\n",
     "    \"\"\"\n",
     "    n_timesteps = len(inference_values)\n",
-    "    xspan = np.arange(1, n_timesteps + 1)\n",
+    "    xspan = jnp.arange(1, n_timesteps + 1)\n",
     "    spans = find_dishonest_intervals(states)\n",
     "    if map_estimate:\n",
     "        ax.step(xspan, inference_values, where=\"post\")\n",
@@ -342,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "237626b2",
    "metadata": {},
    "outputs": [
@@ -350,7 +349,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/03/7y894xkj7k7266681pht1hw40000gn/T/ipykernel_66829/1416912245.py:5: UserWarning: Matplotlib is currently using module://matplotlib_inline.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
+      "/var/folders/03/7y894xkj7k7266681pht1hw40000gn/T/ipykernel_89062/1416912245.py:5: UserWarning: Matplotlib is currently using module://matplotlib_inline.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
       "  fig.show()\n"
      ]
     },
@@ -386,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "9aef1d42",
    "metadata": {},
    "outputs": [
@@ -400,13 +399,12 @@
    ],
    "source": [
     "posterior = hmm.smoother(params, emissions)\n",
-    "\n",
     "print(posterior.smoothed_probs.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "6740986f",
    "metadata": {},
    "outputs": [
@@ -414,7 +412,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/03/7y894xkj7k7266681pht1hw40000gn/T/ipykernel_66829/3116847826.py:5: UserWarning: Matplotlib is currently using module://matplotlib_inline.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
+      "/var/folders/03/7y894xkj7k7266681pht1hw40000gn/T/ipykernel_89062/3116847826.py:5: UserWarning: Matplotlib is currently using module://matplotlib_inline.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
       "  fig.show()\n"
      ]
     },
@@ -450,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "b1727a7d",
    "metadata": {},
    "outputs": [],
@@ -460,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "e223JBC5DhPP",
    "metadata": {
     "id": "e223JBC5DhPP"
@@ -470,7 +468,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/03/7y894xkj7k7266681pht1hw40000gn/T/ipykernel_66829/3291582843.py:5: UserWarning: Matplotlib is currently using module://matplotlib_inline.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
+      "/var/folders/03/7y894xkj7k7266681pht1hw40000gn/T/ipykernel_89062/3291582843.py:5: UserWarning: Matplotlib is currently using module://matplotlib_inline.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
       "  fig.show()\n"
      ]
     },
