moving utils into separate module

--- a/docs/notebooks/hmm/autoregressive_hmm.ipynb
+++ b/docs/notebooks/hmm/autoregressive_hmm.ipynb
@@ -53,8 +53,8 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from dynamax.hmm.models.autoregressive_hmm import LinearAutoregressiveHMM\n",
-    "from dynamax.plotting import gradient_cmap\n",
-    "from dynamax.utils import random_rotation\n",
+    "from dynamax.utils.plotting import gradient_cmap\n",
+    "from dynamax.utils.utils import random_rotation\n",
     "from tensorflow_probability.substrates import jax as tfp"
    ]
   },
@@ -126,7 +126,9 @@
        "<Figure size 432x288 with 2 Axes>"
       ]
      },
-     "metadata": {},
+     "metadata": {
+      "needs_background": "light"
+     },
      "output_type": "display_data"
     }
    ],
@@ -278,7 +280,9 @@
        "<Figure size 576x576 with 1 Axes>"
       ]
      },
-     "metadata": {},
+     "metadata": {
+      "needs_background": "light"
+     },
      "output_type": "display_data"
     }
    ],
@@ -321,7 +325,9 @@
        "<Figure size 576x432 with 1 Axes>"
       ]
      },
-     "metadata": {},
+     "metadata": {
+      "needs_background": "light"
+     },
      "output_type": "display_data"
     }
    ],
