--- a/docs/notebooks/linear_gaussian_ssm/lgssm_hmc.ipynb
+++ b/docs/notebooks/linear_gaussian_ssm/lgssm_hmc.ipynb
@@ -267,7 +267,7 @@
    "outputs": [],
    "source": [
     "from dynamax.parameters import to_unconstrained, from_unconstrained\n",
-    "from dynamax.utils import pytree_stack, ensure_array_has_batch_dim\n",
+    "from dynamax.utils.utils import pytree_stack, ensure_array_has_batch_dim\n",
     "from functools import partial\n",
     "from fastprogress.fastprogress import progress_bar\n",
     "\n",
