--- a/docs/notebooks/linear_gaussian_ssm/lgssm_learning.ipynb
+++ b/docs/notebooks/linear_gaussian_ssm/lgssm_learning.ipynb
@@ -55,7 +55,7 @@
     "from matplotlib import pyplot as plt\n",
     "\n",
     "from dynamax.linear_gaussian_ssm.linear_gaussian_ssm_conjugate import LinearGaussianConjugateSSM\n",
-    "from dynamax.utils import monotonically_increasing"
+    "from dynamax.utils.utils import monotonically_increasing"
    ]
   },
   {
